fixed strong type to not be too low; need new style for subheads

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -20,8 +20,6 @@ body.modal-open {
 
 strong {
   font-weight: 700;
-  position: relative;
-  top:14px;
 }
 
 @import url('https://fonts.googleapis.com/css?family=Neuton:200,300,400,400i,700,800|Quicksand:300,400,500,700');
